--- a/LAB 13/email validation.css
+++ b/LAB 13/email validation.css
@@ -8,7 +8,7 @@ li {
     padding-left: 10px;
     padding-bottom: 10px;
     width: 400px;
-    background: #fff;
+    background: rgb(23, 10, 63);
     border: 1px soild black;
   }
   .mail h2 {
