--- a/LAB 14/SELECT CITY AND DISPLAY PHOTO OF SELECTED CITY/assets/lab12.css
+++ b/LAB 14/SELECT CITY AND DISPLAY PHOTO OF SELECTED CITY/assets/lab12.css
@@ -1,3 +1,7 @@
+.body{
+    background-color: darkorange;
+    text-align: center;
+}
 .surat{
     margin: auto;
     background-image: url("Images/businessCenter.jpeg");
