--- a/LAB 12/Student_Form_Validation/CSS/Student_Registration_Form.css
+++ b/LAB 12/Student_Form_Validation/CSS/Student_Registration_Form.css
@@ -9,11 +9,12 @@ body{
 	justify-content: center;
 	display: flex;
 	font-family: sans-serif;
+	background-color: #1c2bd1;
 }
 .container{
 	position: relative;
 	margin-top: 100px;
-	width: 450px;
+	width: 550px;
 	height: auto;
 	background: #dedede;
 	border-radius: 5px;
@@ -23,9 +24,11 @@ body{
 	font-size: 35px;
 	font-weight: bold;
 	color: #130f40;
+	text-align: center;
 }
 .login_form{
 	padding: 0px 40px;
+	text-align: center;
 }
 .login_form .font{
 	font-size: 18px;
