--- a/LAB 13/password.css
+++ b/LAB 13/password.css
@@ -1,3 +1,8 @@
+.body{
+  text-align: center;
+  align-items: center;
+  margin-top: 200px;
+}
 li {
     list-style-type: none;
     font-size: 16pt;
@@ -14,6 +19,7 @@ li {
   .mail h2 {
     margin-left: 38px;
     text-align: center;
+    color: aliceblue;
   }
   .rq{
       padding-left: 50px;
