--- a/LAB 14/CHECK BOX TASK/lab12.css
+++ b/LAB 14/CHECK BOX TASK/lab12.css
@@ -1,17 +1,20 @@
 body{
     text-align: center;
-    margin-top: 270px;
     border: 5px;
-    background-color: cadetblue;
+    background-image: url("./175484.jpg");
 }
-
+img{
+    position: absolute;
+}
 .form{
     font-size: 50px;
+    color: aliceblue;
 }
 
 form input{
     height: 20px;
     width: 20px;
+    color: aliceblue;
 }
 
 button{
